--- a/templates/index.html
+++ b/templates/index.html
@@ -2,186 +2,206 @@
 <html lang="de">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Explore Austria</title>
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"/>
     <link rel="stylesheet" href="static/css/explore-austria.css" type="text/css">
     <script type="text/javascript" src="static/js/jquery-3.4.1.min.js"></script>
-<!--    <script type="text/javascript" src="js/explore-austria.js"></script>-->
+    <!--    <script type="text/javascript" src="js/explore-austria.js"></script>-->
 </head>
 
-<body id="explore-austria-body" class="h-screen">   
-    <nav class="bg-gray-200 p-5">
-        <div class="flex items-center w-full">
-            <div class="flex flex-grow text-gray-700">
-                <div class="flex-grow">
-                    <a class="font-bold text-md lg:text-3xl hover:text-gray-600" href="#">
-                        Explore Austria {{.Titel}}
-                    </a>
-                </div>
+<body id="explore-austria-body" class="h-screen">
+<nav class="bg-gray-200 p-5">
+    <div class="flex items-center w-full">
+        <div class="flex flex-grow text-gray-700">
+            <div class="flex-grow">
+                <a class="font-bold text-md lg:text-3xl hover:text-gray-600" href="#">
+                    Explore Austria
+                </a>
             </div>
-            <div class="flex items-center text-sm lg:text-lg tracking-wider text-gray-700 bg-gray-200 invisible md:visible ">
-                <div>
+        </div>
+        <div class="flex items-center text-sm lg:text-lg tracking-wider text-gray-700 bg-gray-200 invisible md:visible ">
+            <div>
                 <a href=" #responsive-header" class="hover:text-gray-600 mr-4">
                     {{.Nav.Touren}}
                 </a>
-                </div>
-                <div>
+            </div>
+            <div>
                 <a href="#responsive-header" class="hover:text-gray-600 mr-4">
                     Über uns
                 </a>
-                </div>
-                <div>
+            </div>
+            <div>
                 <a href="html/kontakt.html" class="hover:text-gray-600 mr-4">
-                    Kontakt
+                    {{.Nav.Kontakt}}
                 </a>
-                </div>
-            
-                <div class="inline-blick relative">                
-                    <select id="sprache-combo" class="block appearance-none w-full bg-gray-100 border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded  leading-tight focus:outline-none focus:shadow-outline">
-                            <option>Deutsch</option>
-                            <option>Russisch</option>
-                            <option>Ukrainisch</option>
-                    </select>    
+            </div>
+
+            <div class="inline-blick relative">
+                <select id="sprache-combo"
+                        class="block appearance-none w-full bg-gray-100 border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded  leading-tight focus:outline-none focus:shadow-outline">
+                    {{.Sprache}}
+                </select>
                 <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-                </div>            
-                          
-            </div>
-            </div>
-        </div>
-    </nav>
-    <div class="relative w-full mt-16 mb-16 ">
-        <div class="absolute inset-y-0 top-0 z-0 ml-3 lg:ml-10">
-            <div><img src="static/images/442px-Austria_Bundesadler.png" class="wappen"></img></div>
-        </div>
-        <div class="container z-10 mx-auto w-full">
-            <div class="text-center mt-4  ">
-                <h3 class="text-gray-700 text-3xl font-semibold">Herzlich Willkommen!</h3>
-                <h5 class="text-gray-700 text-lg font-semibold">Wollen Sie Österrich mit uns entdecken</h5>
-                <!--   <h5 id="xxxx" class="text-gray-700 text-lg font-semibold" data-i18n="main.header">(test)</h5> -->
-            </div>
-        </div>
-        <section class="relative container mx-auto ">
-            <div class="z-10 ">
-                <div class="mt-4 mb-2">
-                    <h3 class="text-gray-700 text-2xl font-semibold">Führungen</h3>
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
+                    </svg>
                 </div>
-                <div class=" md:flex w-full">
-                    <div class="w-full md:w-1/3 px-2">
-                        <div class="rounded overflow-hidden bg-white">
-                            <img class="w-full rounded" src="static/images/erfolgstreppe.jpg" alt="Sunset in the mountains">
-                            <div class="px-6 py-4">
-                                <div class="text-gray-700 font-bold text-xl mb-2">Wien im Überblick</div>
-                                <p class="text-gray-700 text-base">
-                                    Unsere Überblicksführungen geben Ihnen einen umfassenden Eindruck über Wien.
-                                </p>
-                            </div>
-                            <div class="px-6 py-4">
+
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="relative w-full mt-16 mb-16 ">
+    <div class="absolute inset-y-0 top-0 z-0 ml-3 lg:ml-10">
+        <div><img src="static/images/442px-Austria_Bundesadler.png" class="wappen"></img></div>
+    </div>
+    <div class="container z-10 mx-auto w-full">
+        <div class="text-center mt-4  ">
+            <h3 class="text-gray-700 text-3xl font-semibold"> {{.Titel}}</h3>
+            <h5 class="text-gray-700 text-lg font-semibold">{{.Untertitel}}</h5>
+            <!--   <h5 id="xxxx" class="text-gray-700 text-lg font-semibold" data-i18n="main.header">(test)</h5> -->
+        </div>
+    </div>
+    <section class="relative container mx-auto ">
+        <div class="z-10 ">
+            <div class="mt-4 mb-2">
+                <h3 class="text-gray-700 text-2xl font-semibold">Führungen</h3>
+            </div>
+            <div class=" md:flex w-full">
+                <div class="w-full md:w-1/3 px-2">
+                    <div class="rounded overflow-hidden bg-white">
+                        <img class="w-full rounded" src="static/images/erfolgstreppe.jpg" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="text-gray-700 font-bold text-xl mb-2">Wien im Überblick</div>
+                            <p class="text-gray-700 text-base">
+                                Unsere Überblicksführungen geben Ihnen einen umfassenden Eindruck über Wien.
+                            </p>
+                        </div>
+                        <div class="px-6 py-4">
                                 <span
-                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2 mb-1">
+                                        class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2 mb-1">
                                     <a href="#">Führung anfragen</a></span>
-                                <span
+                            <span
                                     class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2">
                                     <a href="#">Mehr erfahren</a></span>
-                            </div>
                         </div>
                     </div>
-
-                    <div class="w-full md:w-1/3 px-2">
-                        <div class="rounded overflow-hidden bg-white">
-                            <img class="w-full rounded" src="static/images/erfolgstreppe.jpg" alt="Sunset in the mountains">
-                            <div class="px-6 py-4">
-                                <div class="font-bold text-xl mb-2">Museen</div>
-                                <p class="text-gray-700 text-base">
-                                    Wien bietet eine Fülle an Museen mit Kunstwerken und Sammlungen von Weltrang.
-                                </p>
-                            </div>
-                            <div class="px-6 py-4">
-                                <span
-                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2 mb-1">Führung
-                                    anfragen</span>
-                                <span
-                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2">Mehr
-                                    erfahren</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="w-full md:w-1/3 px-2">
-                        <div class="rounded overflow-hidden bg-white">
-                            <img class="w-full rounded" src="static/images/Wien_09_Votivpark_g.jpg" alt="Sunset in the mountains">
-                            <div class="px-6 py-4">
-                                <div class="font-bold text-xl mb-2 text-gray-700">Gärten und Parkanlagen</div>
-                                <p class="text-gray-700 text-base">
-                                    Wiens Grünflächen nehmen einen großen Teil der Stadt ein.
-                                </p>
-                            </div>
-                            <div class="px-6 py-4">
-                                <span
-                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2 mb-1">Führung
-                                    anfragen</span>
-                                <span
-                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2">Mehr
-                                    erfahren</span>
-
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
+
+                <div class="w-full md:w-1/3 px-2">
+                    <div class="rounded overflow-hidden bg-white">
+                        <img class="w-full rounded" src="static/images/erfolgstreppe.jpg" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2">Museen</div>
+                            <p class="text-gray-700 text-base">
+                                Wien bietet eine Fülle an Museen mit Kunstwerken und Sammlungen von Weltrang.
+                            </p>
+                        </div>
+                        <div class="px-6 py-4">
+                                <span
+                                        class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2 mb-1">Führung
+                                    anfragen</span>
+                            <span
+                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2">Mehr
+                                    erfahren</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-full md:w-1/3 px-2">
+                    <div class="rounded overflow-hidden bg-white">
+                        <img class="w-full rounded" src="static/images/Wien_09_Votivpark_g.jpg" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-gray-700">Gärten und Parkanlagen</div>
+                            <p class="text-gray-700 text-base">
+                                Wiens Grünflächen nehmen einen großen Teil der Stadt ein.
+                            </p>
+                        </div>
+                        <div class="px-6 py-4">
+                                <span
+                                        class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2 mb-1">Führung
+                                    anfragen</span>
+                            <span
+                                    class="inline-block bg-gray-300 rounded-full px-4 py-2 text-sm font-semibold text-gray-700 mr-2">Mehr
+                                    erfahren</span>
+
+                        </div>
+                    </div>
+                </div>
+
             </div>
-        </section>
-    </div>
-    <div class="absolute inset-x-0 bottom-0 h-32 bg-gray-200 text-gray-700 text-center p-4">
-        <footer class="">
-            <p class="text-sm">©Copyright 2019 by Paul Primus. All rights reversed.</p>
-        </footer>
-    </div>
-    <script>
-        'use strict';
-        var camel = (function () {
-           let test = function () {
-                console.log("test");
-           }
-           var onSpracheCombo = function () {
-                $("#sprache-combo").change((e) => {
-                   console.log("key pressed", e);
-                    _sendLanguage("ru")
-                });
-           }
+        </div>
+    </section>
+</div>
+<div class="absolute inset-x-0 bottom-0 h-32 bg-gray-200 text-gray-700 text-center p-4">
+    <footer class="">
+        <p class="text-sm">©Copyright 2019 by Paul Primus. All rights reversed.</p>
+    </footer>
+</div>
+<script>
+    'use strict';
+    var camel = (function () {
+        let test = function () {
+            console.log("test");
+        }
+        var onSpracheCombo = function () {
+            $("#sprache-combo").change((e) => {
+                console.log("key pressed", e);
+                _sendLanguage($("#sprache-combo").val())
+            });
+        }
 
-            var _sendLanguage = function (sprache) {
+        let _sendLanguage = function (sprache) {
 
-                var url = '/main/language';
-                $.ajax({
-                    type: "POST",
-                    url: url,
-                    contentType: "application/json; charset=UTF-8",
-                    data: JSON.stringify({"Sprache":"test"}),
-                    // data: {pensionRueckstellung: pensionsrueckstellung},
-                    dataType: "json",
-                    success: function (data) {
-                        console.log("Erfolgreich: Sprache wurde geaendert!");
-                    },
-                    error: function (err) {
-                        console.log("Fehler! Sprache konnte nicht geaendert werden!", err);
-                    }
-                });
+            let url = '/main/language';
+            // $.ajax({
+            //     type: "POST",
+            //     url: url,
+            //     //contentType: "application/json; charset=UTF-8",
+            //     contentType : "x-www-form-urlencoded; charset=UTF-8",
+            //     data: JSON.stringify({"Sprache":sprache}),
+            //     // data: {pensionRueckstellung: pensionsrueckstellung},
+            //     dataType: "json",
+            //     success: function (data) {
+            //         console.log("Erfolgreich: Sprache wurde geaendert!");
+            //     },
+            //     error: function (err) {
+            //         console.log("Fehler! Sprache konnte nicht geaendert werden!", err);
+            //     }
+            // });
+            var formData = new FormData();
+            formData.append('sprache', sprache);
+            $.ajax({
+                type: "POST",
+                url: url,
+                contentType: false,
+                data: formData,
+                processData: false,
+                success: function (data) {
+                    console.log("Erfolgreich: Sprache wurde geaendert!");
+                    let newDoc = document.open("text/html", "replace");
+                    newDoc.write(data);
+                    newDoc.close();
+                },
+                error: function (err) {
+                    console.log("Fehler! Sprache konnte nicht geaendert werden!", err);
+                }
+            });
 
-            }
+        }
 
-           return {
-               test:test,
-               onSpracheCombo: onSpracheCombo
-           }
-        })();
-        $(function () {
-            camel.test();
-            camel.onSpracheCombo();
-            console.log("Bereit!");
-        })
-    </script>
+        return {
+            test: test,
+            onSpracheCombo: onSpracheCombo
+        }
+    })();
+    $(function () {
+        camel.test();
+        camel.onSpracheCombo();
+        console.log("Bereit!");
+    })
+</script>
 </body>
 
 </html>
