--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"/>
     <link rel="stylesheet" href="static/css/explore-austria.css" type="text/css">
     <script type="text/javascript" src="static/js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <!--    <script type="text/javascript" src="js/explore-austria.js"></script>-->
 </head>
 
@@ -20,6 +21,7 @@
                 </a>
             </div>
         </div>
+
         <div class="flex items-center text-sm lg:text-lg tracking-wider text-gray-700 bg-gray-200 invisible md:visible ">
             <div>
                 <a href=" #responsive-header" class="hover:text-gray-600 mr-4">
@@ -28,12 +30,7 @@
             </div>
             <div>
                 <a href="#responsive-header" class="hover:text-gray-600 mr-4">
-                    Über uns
-                </a>
-            </div>
-            <div>
-                <a href="html/kontakt.html" class="hover:text-gray-600 mr-4">
-                    {{.Nav.Kontakt}}
+                    {{.Nav.Uebermich}}
                 </a>
             </div>
 
@@ -52,30 +49,59 @@
         </div>
     </div>
 </nav>
-<div class="relative w-full mt-16 mb-16 ">
-    <div class="absolute inset-y-0 top-0 z-0 ml-3 lg:ml-10">
-        <div><img src="static/images/442px-Austria_Bundesadler.png" class="wappen"></img></div>
-    </div>
-    <div class="container z-10 mx-auto w-full">
-        <div class="text-center mt-4  ">
+
+<div class="w-full mt-16 mb-16 ">
+    {{/*    <div class="absolute inset-y-0 top-0 z-0 ml-3 lg:ml-10">*/}}
+    {{/*        <div><img src="static/images/442px-Austria_Bundesadler.png" class="wappen"></img></div>*/}}
+    {{/*    </div>*/}}
+    <div class="container lg:flex lg:justify-around p-20 mx-auto">
+        {{/*        <div class="z-10">*/}}
+        <div class="text-center mb-6">
             <h3 class="text-gray-700 text-3xl font-semibold"> {{.Titel}}</h3>
             <h5 class="text-gray-700 text-lg font-semibold">{{.Untertitel}}</h5>
-            <!--   <h5 id="xxxx" class="text-gray-700 text-lg font-semibold" data-i18n="main.header">(test)</h5> -->
+        </div>
+        <div class="text-gray-700 mb-6">
+            <div class="flex flex-grow mb-3">
+                <svg class="fill-current text-gray-700 inline-block h-8 w-8 mr-3" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                     viewBox="0 0 24 24">
+                    <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                </svg>
+                <div>
+                    asdfsadf
+                </div>
+            </div>
+            <div class="flex flex-grow mr-3 mb-3">
+                <svg class="fill-current text-gray-700 inline-block h-8 w-8" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                     viewBox="0 0 24 24">
+                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                </svg>
+                <div>
+                    kateryna.pacher@gmail.com
+                </div>
+            </div>
+            <div class="flex flex-grow  mr-3">
+                <svg class="fill-current text-gray-700 inline-block h-8 w-8" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                     viewBox="0 0 24 24">
+                    <path d="M18.48 22.926l-1.193.658c-6.979 3.621-19.082-17.494-12.279-21.484l1.145-.637 3.714 6.467-1.139.632c-2.067 1.245 2.76 9.707 4.879 8.545l1.162-.642 3.711 6.461zm-9.808-22.926l-1.68.975 3.714 6.466 1.681-.975-3.715-6.466zm8.613 14.997l-1.68.975 3.714 6.467 1.681-.975-3.715-6.467z"/>
+                </svg>
+                <div>
+                    0664633232
+                </div>
+            </div>
         </div>
     </div>
-    <section class="relative container mx-auto ">
-        <div class="z-10 ">
-            <div class="mt-4 mb-2">
-                <h3 class="text-gray-700 text-2xl font-semibold">Führungen</h3>
-            </div>
-            <div class=" md:flex w-full">
-                <div class="w-full md:w-1/3 px-2">
+    <section class="container mx-auto ">
+        <div class="">
+
+            <div class=" lg:flex w-full">
+                <div class="w-full lg:w-1/3 px-2">
                     <div class="rounded overflow-hidden bg-white">
                         <img class="w-full rounded" src="static/images/erfolgstreppe.jpg" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
-                            <div class="text-gray-700 font-bold text-xl mb-2">Wien im Überblick</div>
+                            <div class="text-gray-700 font-bold text-xl mb-2">{{.Spaziergaenge.Titel}}</div>
                             <p class="text-gray-700 text-base">
-                                Unsere Überblicksführungen geben Ihnen einen umfassenden Eindruck über Wien.
+                                {{.Spaziergaenge.Kurzbeschreibung}}
                             </p>
                         </div>
                         <div class="px-6 py-4">
@@ -89,11 +115,11 @@
                     </div>
                 </div>
 
-                <div class="w-full md:w-1/3 px-2">
+                <div class="w-full lg:w-1/3 px-2">
                     <div class="rounded overflow-hidden bg-white">
                         <img class="w-full rounded" src="static/images/erfolgstreppe.jpg" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
-                            <div class="font-bold text-xl mb-2">Museen</div>
+                            <div class="text-gray-700 font-bold text-xl mb-2">Museen</div>
                             <p class="text-gray-700 text-base">
                                 Wien bietet eine Fülle an Museen mit Kunstwerken und Sammlungen von Weltrang.
                             </p>
@@ -109,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class="w-full md:w-1/3 px-2">
+                <div class="w-full lg:w-1/3 px-2">
                     <div class="rounded overflow-hidden bg-white">
                         <img class="w-full rounded" src="static/images/Wien_09_Votivpark_g.jpg" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
@@ -134,7 +160,7 @@
         </div>
     </section>
 </div>
-<div class="absolute inset-x-0 bottom-0 h-32 bg-gray-200 text-gray-700 text-center p-4">
+<div class=" bottom-0 h-32 bg-gray-200 text-gray-700 text-center p-4">
     <footer class="">
         <p class="text-sm">©Copyright 2019 by Paul Primus. All rights reversed.</p>
     </footer>
@@ -155,21 +181,6 @@
         let _sendLanguage = function (sprache) {
 
             let url = '/main/language';
-            // $.ajax({
-            //     type: "POST",
-            //     url: url,
-            //     //contentType: "application/json; charset=UTF-8",
-            //     contentType : "x-www-form-urlencoded; charset=UTF-8",
-            //     data: JSON.stringify({"Sprache":sprache}),
-            //     // data: {pensionRueckstellung: pensionsrueckstellung},
-            //     dataType: "json",
-            //     success: function (data) {
-            //         console.log("Erfolgreich: Sprache wurde geaendert!");
-            //     },
-            //     error: function (err) {
-            //         console.log("Fehler! Sprache konnte nicht geaendert werden!", err);
-            //     }
-            // });
             var formData = new FormData();
             formData.append('sprache', sprache);
             $.ajax({
@@ -188,7 +199,6 @@
                     console.log("Fehler! Sprache konnte nicht geaendert werden!", err);
                 }
             });
-
         }
 
         return {
